<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.btpj.wanandroid.ui.login.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.register.RegisterActivity">

        <com.btpj.lib_base.widgets.TitleLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:titleText="@string/register" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/_f5f5f5"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:cursorVisible="true"
                android:hint="@string/user_name"
                android:maxLength="50"
                android:singleLine="true"
                android:text="@={viewModel.userName}"
                android:textColor="@color/_333333"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundColor="@color/_f5f5f5"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:cursorVisible="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true"
                android:text="@={viewModel.userPwd}"
                android:textColor="@color/_333333"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_passwordSure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:boxBackgroundColor="@color/_f5f5f5"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_passwordSure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:cursorVisible="true"
                android:hint="@string/password_sure"
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true"
                android:text="@={viewModel.userPwdSure}"
                android:textColor="@color/_333333"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:alpha="@{viewModel.loginBtnEnable?1f:0.5f}"
            android:backgroundTint="@color/purple_500"
            android:enabled="@{viewModel.loginBtnEnable}"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/_ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</layout>