<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.btpj.wanandroid.ui.search.SearchViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchActivity">

        <com.btpj.lib_base.widgets.TitleLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="@android:color/transparent"
            android:hint="@string/input_search_key_to_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:text="@={viewModel.searchKeyStr}"
            android:textColor="@color/_ffffff"
            android:textColorHint="@color/_cccccc"
            app:layout_constraintBottom_toBottomOf="@+id/titleLayout"
            app:layout_constraintTop_toTopOf="@+id/titleLayout"
            tools:ignore="Autofill" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_hotSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/hot_search"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_hotSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="6dp"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotSearch" />

                <TextView
                    android:id="@+id/tv_searchHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/search_history"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_hotSearch"
                    app:layout_constraintTop_toBottomOf="@+id/rv_hotSearch" />

                <TextView
                    android:id="@+id/tv_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:onClick="@{v->viewModel.clearHistory()}"
                    android:padding="10dp"
                    android:text="@string/clear"
                    android:textColor="@color/_666666"
                    android:visibility="@{viewModel.searchHistoryData.size==0?View.GONE:View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_searchHistory"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_searchHistory" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_searchHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:scrollbars="none"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_searchHistory" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>