<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.btpj.wanandroid.ui.setting.SettingViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.SettingActivity">

        <com.btpj.lib_base.widgets.TitleLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isShowBack="true"
            app:layout_constraintTop_toTopOf="parent"
            app:titleText="设置" />

        <TextView
            android:id="@+id/tv_clearCache"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/clearCache"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout" />

        <TextView
            android:id="@+id/tv_cacheNum"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical|end"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textColor="@color/_999999"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tv_clearCache"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_clearCache"
            app:layout_constraintTop_toTopOf="@+id/tv_clearCache"
            tools:text="31.16MB" />

        <!-- 使用Layer可以设置点击事件，Group可以设置显示Gone/Visible -->
        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/layer_clearCache"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            app:constraint_referenced_ids="tv_clearCache,tv_cacheNum"
            app:layout_constraintBottom_toBottomOf="@+id/tv_clearCache"
            app:layout_constraintTop_toTopOf="@+id/tv_clearCache" />

        <include
            android:id="@+id/line_cacheNum"
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_clearCache" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/version"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_cacheNum" />

        <TextView
            android:id="@+id/tv_versionName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical|end"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textColor="@color/_999999"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tv_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_version"
            app:layout_constraintTop_toTopOf="@+id/tv_version"
            tools:text="当前版本 V1.0.0" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="37dp"
            android:background="@drawable/bg_circle_red"
            android:visibility="@{viewModel.haveNewVersion?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_versionName"
            app:layout_constraintEnd_toEndOf="@+id/tv_versionName"
            app:layout_constraintTop_toTopOf="@+id/tv_versionName" />

        <!-- 使用Layer可以设置点击事件，Group可以设置显示Gone/Visible -->
        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/layer_version"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            app:constraint_referenced_ids="tv_version,tv_versionName"
            app:layout_constraintBottom_toBottomOf="@+id/tv_version"
            app:layout_constraintTop_toTopOf="@+id/tv_version" />

        <include
            android:id="@+id/line_version"
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_version" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/author"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_version" />

        <TextView
            android:id="@+id/tv_authorName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:drawablePadding="6dp"
            android:gravity="center_vertical|end"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:text="BTPJ"
            android:textColor="@color/_999999"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/tv_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_author"
            app:layout_constraintTop_toTopOf="@+id/tv_author"
            tools:ignore="HardcodedText" />

        <!-- 使用Layer可以设置点击事件，Group可以设置显示Gone/Visible -->
        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/layer_author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            app:constraint_referenced_ids="tv_author,tv_authorName"
            app:layout_constraintBottom_toBottomOf="@+id/tv_author"
            app:layout_constraintTop_toTopOf="@+id/tv_author" />

        <include
            android:id="@+id/line_author"
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />

        <TextView
            android:id="@+id/tv_sourceCode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/source_code"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow_right"
            app:layout_constraintTop_toBottomOf="@+id/line_author" />

        <include
            android:id="@+id/line_sourceCode"
            layout="@layout/include_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sourceCode" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/logout"
            android:visibility="@{viewModel.showLogoutBtn?View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line_sourceCode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>